...
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:scaleType="fitXY"
            app:srcCompat="@drawable/viewwalletbg" />

        <Button
            android:id="@+id/backtobank"
            android:layout_width="98dp"
            android:layout_height="50dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="45dp"
            android:layout_marginStart="33dp"
            android:background="@drawable/backtobank"
            android:onClick="gobacktobank" />


        <ListView
            android:id="@+id/listviewwallet"
            android:layout_width="match_parent"
            android:layout_height="457dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="83dp"
            android:scrollbars="vertical" />

    <Button
        android:id="@+id/bank"
        android:layout_width="98dp"
        android:layout_height="50dp"
        android:layout_alignTop="@+id/backtobank"
        android:layout_centerHorizontal="true"
        android:background="@drawable/bankcoins"
        android:onClick="bankcoins" />

    <Button
        android:id="@+id/sparetransfer"
        android:layout_width="98dp"
        android:layout_height="50dp"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/backtobank"
        android:layout_marginEnd="35dp"
        android:background="@drawable/movetospare"
...
