...
        app:layout_constraintHorizontal_bias="0.593"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.764" />

    <Button
        android:id="@+id/viewwallet"
        android:layout_width="84dp"
        android:layout_height="76dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/walletbuttonbank"
        android:onClick="walletviewer"
        app:layout_constraintBottom_toBottomOf="parent"
...
        app:layout_constraintHorizontal_bias="0.199"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.48" />

    <Button
        android:id="@+id/viewsparechange"
        android:layout_width="93dp"
        android:layout_height="80dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/viewsparechangebutton"
        android:onClick="sparechangeviewer"
        app:layout_constraintBottom_toBottomOf="parent"
...
